# pandoc-linear-table

./: CHANGELOG.md  LICENSE  LinearTable.hs  README.md  default.nix  flake.nix  pandoc-linear-table.cabal  pandoc-linear-tables.cabal
.github/workflows/: flakehub-publish-tagged.yml
app/: Main.hs
src/Text/Pandoc/Filters/: LinearTable.hs
